--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,7 +1,7 @@
 title: Creative Coding 1, MART 120
 title-short: Creative Coding 1
 description: A course to teach code so that it becomes a tool for art and creativity.
-institution: University of Montana, School of Media Arts
+institution: University of Montana, School of Visual and Media Arts
 institution-short: Media Arts | Montana
 
 infoModules: [workspace, syllabus, instructors, help]
